# ttk91-compiler

./: .gitignore  README.md  package.yaml
c/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
c/include/: comment.h  error.h  expr.h  label.h  oper.h  program.h  token.h  ttk_register.h  value.h
c/src/: comment.c  expr.c  label.c  main.c  oper.c  parser.bison  program.c  scanner.flex  ttk_register.c  value.c
c/test/: comment.cpp  expr.cpp  label.cpp  oper.cpp  ttk_register.cpp  value.cpp
cpp/: CMakeLists.txt
cpp/include/: Lexer.hpp  Token.hpp
cpp/src/: Lexer.cpp  Token.cpp  main.cpp
docs/: example-file-harder.k91  example-file-simple.k91  example-file.k91
haskell/: CHANGELOG.md  ttk91-compiler.cabal
haskell/app/: Main.hs
haskell/docs/: tkk91.md
haskell/src/: Parser.hs  Register.hs
python/: example.k91  pyproject.toml
python/src/: main.py  parser.py  token.py
