[tool.poetry]
name = "ttk91-compiler"
version = "0.1.0"
description = ""
authors = ["Aaro Koivukangas <aaro.koivukangas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
